[project]
name = "nari-tts"
version = "0.1.0"
description = "Dia - A text-to-speech model for dialogue generation"
readme = "README.md"
requires-python = ">3.11,<3.13"
license = {file = "LICENSE"}
authors = [
    {name = "Nari Labs", email = "contact@narilabs.ai"}
]
dependencies = [
    "descript-audio-codec>=1.0.0",
    "gradio>=5.25.2",
    "huggingface-hub>=0.30.2",
    "numpy==1.26.4",
    "pydantic>=2.11.3",
    "soundfile>=0.13.1",
    # "torch==2.4.0+rocm6.3.4; sys_platform == 'linux'",  # specify exact version and ROCm platform
    # "torchaudio==2.4.0+rocm6.3.4; sys_platform == 'linux'",
    # "pytorch-triton-rocm==3.0.0+rocm6.3.4 ; sys_platform == 'linux'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
"Homepage" = "https://github.com/nari-labs/dia"
"Bug Tracker" = "https://github.com/nari-labs/dia/issues"

[tool.hatch.build.targets.wheel]
packages = ["dia"]

[tool.ruff]
lint.ignore = ["C901", "E501", "E741", "W605"]
lint.select = ["C", "E", "F", "I", "W"]
line-length = 119

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.uv.sources]
torch = [
  { index = "pytorch-rocm", marker = "sys_platform == 'linux'" },
]
torchaudio = [
  { index = "pytorch-rocm", marker = "sys_platform == 'linux'" },
]
pytorch-triton-rocm = [
  { index = "pytorch-rocm", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.3.4"
explicit = true
